deployments/loadtest-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loadtest
  labels:
    app: loadtest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loadtest
  template:
    metadata:
      labels:
        app: loadtest
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
      - name: loadtest
        image: aksjvmlabacr.azurecr.io/loadtest:latest
        ports:
        - containerPort: 8080
          name: http
        resources:
          requests:
            cpu: "6000m"
            memory: "8Gi"
          limits:
            cpu: "8000m"
            memory: "8Gi"
        command: [ "/bin/bash", "-c", "--" ]
        args: [ "while true; do sleep 30; done;" ]
