deployments/app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sampleapp-parallelgc
spec:
  strategy: 
    type: Recreate
  replicas: 3
  selector:
    matchLabels:
      app: sampleapp
      version: parallelgc
  template:
    metadata:
      labels:
        app: sampleapp
        version: parallelgc
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
      - name: sampleapp-parallelgc
        image: aksjvmlabacr.azurecr.io/sampleapp:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http
        resources:
          requests:
            cpu: "2000m"
            memory: "1Gi"
          limits:
            cpu: "2000m"
            memory: "1Gi"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sampleapp-g1gc
spec:
  strategy: 
    type: Recreate
  replicas: 3
  selector:
    matchLabels:
      app: sampleapp
      version: g1gc
  template:
    metadata:
      labels:
        app: sampleapp
        version: g1gc
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
      - name: sampleapp-g1gc
        image: aksjvmlabacr.azurecr.io/sampleapp:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http
        resources:
          requests:
            cpu: "2000m"
            memory: "1Gi"
          limits:
            cpu: "2000m"
            memory: "1Gi"
---
apiVersion: v1
kind: Service
metadata:
  name: internal-sampleapp-parallelgc
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  type: LoadBalancer
  ports:
  - port: 80
    name: http
    targetPort: 8080
  selector:
    app: sampleapp
    version: parallelgc
---
apiVersion: v1
kind: Service
metadata:
  name: internal-sampleapp-g1gc
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  type: LoadBalancer
  ports:
  - port: 80
    name: http
    targetPort: 8080
  selector:
    app: sampleapp
    version: g1gc
